<resources>
    <string name="app_name">Kaared</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kaared</string>
    <string name="nav_header_subtitle">kaared_contacto@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>

    <string name="menu_seccion_1">Citas</string>
    <string name="menu_camera">Agendar</string>
    <string name="menu_gallery">Editar</string>
    <string name="menu_slideshow">Cancelar</string>
    <string name="menu_tools">Visualizar</string>

    <string name="menu_seccion_2">Caja</string>
    <string name="menu_share">Ingresos</string>
    <string name="menu_send">Egresos</string>
    <string name="menu_resumen">Resumen</string>

    <string name="title_activity_semana">SemanaActivity</string>

    <string name="tab_sem_1">Lunes</string>
    <string name="tab_sem_2">Martes</string>
    <string name="tab_sem_3">Miercoles</string>
    <string name="tab_sem_4">Jueves</string>
    <string name="tab_sem_5">Viernes</string>

    <string name="easter_egg">Soy un huevito de pascuaBR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
