<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/casa"
        android:title="@string/menu_inicio" />
    <!--<group android:checkableBehavior="single">-->
    <item android:title="@string/menu_seccion_1">
        <menu>
            <item
                android:id="@+id/nav_agendar"
                android:icon="@drawable/agendar"
                android:title="@string/menu_camera" />
            <item
                android:id="@+id/nav_editar"
                android:icon="@drawable/editar"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_cancelar"
                android:icon="@drawable/cancelar"
                android:title="@string/menu_slideshow" />

        </menu>
    </item>
    <!--</group>-->

    <item android:title="@string/menu_seccion_2">
        <menu>
            <item
                android:id="@+id/nav_ingresos"
                android:icon="@drawable/mas"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_egresos"
                android:icon="@drawable/menos2"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_resumen"
                android:icon="@drawable/moneda"
                android:title="@string/menu_resumen" />

        </menu>
    </item>

</menu>
