<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.kaared_v08.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_agendar"
        android:name="com.example.kaared_v08.ui.agendar.AgendarFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_agendar" />

    <fragment
        android:id="@+id/nav_editar"
        android:name="com.example.kaared_v08.ui.editar.EditarFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_editar" />

    <fragment
        android:id="@+id/nav_cancelar"
        android:name="com.example.kaared_v08.ui.cancelar.CancelarFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_cancelar" />


    <fragment
        android:id="@+id/nav_ingresos"
        android:name="com.example.kaared_v08.ui.ingresos.IngresosFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_ingresos" />

    <fragment
        android:id="@+id/nav_egresos"
        android:name="com.example.kaared_v08.ui.egresos.EgresosFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_egresos" />
</navigation>